src/tests/function-declarations/18.txt
function-declarations/18.c:2:2: error: incompatible conversion returning 'char' from a function with return type 'float *'
 	return 'a';
 	^
function-declarations/18.c:6:2: error: incompatible conversion returning 'float' from a function with return type 'int'
 	return 0.0;
 	^
